with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.15.03
=====================
[2509817] Control characters no longer sent via Autotype.
[2481370] Can now create shortcut by right-mouse down dragging.

Changes to Existing Features in 3.15.03
=======================================
None.

New Features for 3.15.03
========================
[2509821] Support Group (\g), Title (\i) and Notes (\o, \onnn) fields
via Autotype.
[] Installation program now offers German as well as English
installation instructions, as well as installing German language
support. The framework is easily extended to other languages. Thanks
to Karlo Van der Gucht for his work on this.

Bugs fixed in 3.15.02
=====================
[2423397] Sorting direction database preference was not being saved in
the database.  See "Changes to Existing Features" below.

Changes to Existing Features in 3.15.02
=======================================
[2423397] Changes to preferences stored in the database are no longer
silently saved in the database (including any changes to any entries).
A new flag is shown in the Status Bar to indicate the preferences have
been changed and the user can decide to save these, or not, when closing
the database, directly or when ending the application.
[] Support interoperability with tools that access edit control text
by setting PWS_PW_MODE environment variable to "NORMAL".

New Features for 3.15.02
========================
[2450841] The user can use the DragBar to drag and drop the group name
when a group is selected. Pressing the Ctrl key while dragging the group,
when a group or entry is selected, will only copy the immediate parent group.