@@ -10,6 +10,7 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.15.03
 =====================
+[2529736] Validate now corrects all Password History errors
 [2509817] Control characters no longer sent via Autotype.
 [2481370] Can now create shortcut by right-mouse down dragging.
 
